# sportradar1

f1-mcp-server/: CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  f1-mcp-config.json  glama.json  pyproject.toml  smithery.yaml
f1-mcp-server/src/f1_mcp_server/: __init__.py  __main__.py  f1_data.py  server.py
mlb-sportradar-mcp-main/: README.md  final_mcp_config.json  pyproject.toml  requirements.txt  setup.py
mlb-sportradar-mcp-main/src/mlb_sportradar_mcp/: __init__.py  __main__.py  mlb_data.py  server.py
nba-sportradar-mcp-main/: README.md  final_mcp_config.json  install.ps1  new_mcp.json  pyproject.toml  requirements.txt  setup.py  test_api.py  test_mcp.py  test_nba_mcp.py  verify_nba_data.py
nba-sportradar-mcp-main/schema/: changelog-v2.0.xsd  common-game-v2.0.xsd  common-game-v4.0.xsd  common-game-v8.0.xsd  common-standings-v2.0.xsd  common-statistics-v3.0.xsd  common-v2.0.xsd  common-v7.0.xsd  common-v8.0.xsd  daily-injuries-v8.0.xsd  free-agents-v7.0.xsd  game-v8.0.xsd  hierarchy-v8.0.xsd  injuries-v2.0.xsd  pbp-v8.0.xsd  profile-v7.0.xsd  rankings-v3.0.xsd  schedule-v5.0.xsd  seasons-v6.0.xsd  standings-v4.0.xsd  statistics-v3.0.xsd  statistics-v7.0.xsd  team-depth-chart-v6.0.xsd  team-v8.0.xsd  teams-v7.0.xsd  transfers-v7.0.xsd
nba-sportradar-mcp-main/src/nba_sportradar_mcp/: __init__.py  __main__.py  nba_data.py  server.py
